--- a/css/base.css
+++ b/css/base.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   font-family: 'roboto';
   font-weight: 400;
-
+  margin: 0 auto;
   width: 100%;
   max-width: 1300px;
 }
