--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,10 @@
 .footer {
-  width: 100%; height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 60px;
   max-width: 1300px;
   background-color: #213b7e;
   color: rgba(255, 255, 255, .5);
-  text-align: center;
 }
