--- a/css/header.css
+++ b/css/header.css
@@ -2,8 +2,8 @@
   display: flex;
   justify-content:space-between;
   align-items: center;
-  margin: 0 auto;
-  width: 100%; max-width: 1300px;
+  width: 100%;
+  max-width: 1300px;
   background-color: #213b7e;
 }
 
@@ -52,4 +52,12 @@
   color: #fff;
   font-size: 14px;
   cursor:pointer;
+}
+
+/* Media */
+
+@media (max-width: 650px) {
+  .login-button {
+    min-width: 80px;
+  }
 }
