--- a/css/login-popup.css
+++ b/css/login-popup.css
@@ -29,7 +29,7 @@
   position: absolute;
   right: 8px;
   top: 8px;
-  width:
+  width: 16px;
   height: 16px;
   font-family: 'Segoe UI';
   color: #ea611390;
