--- a/css/students.css
+++ b/css/students.css
@@ -14,7 +14,6 @@
 }
 
 .icon-img {
-  width: 30px;
   height: 30px;
   margin: 0;
 }
@@ -30,6 +29,7 @@
 
 .student-1 {
   position: relative;
+  cursor: pointer;
 }
 
 .caption-1 {
