--- a/css/base.css
+++ b/css/base.css
@@ -1,9 +1,11 @@
 .page {
   display: flex;
   flex-direction: column;
+  /* flex-grow: 1; */
+  width: 100%;
+  max-width: 1300px;
+  /* min-height: 100vh; */
   font-family: 'roboto';
   font-weight: 400;
   margin: 0 auto;
-  width: 100%;
-  max-width: 1300px;
 }
