--- a/css/login-popup.css
+++ b/css/login-popup.css
@@ -14,7 +14,7 @@
   background-color: rgb(255, 255, 255);
   box-shadow: 6px 6px 20px #808080;
   border: none;
-  margin: 140px auto 0 auto;
+  margin: 122px auto 0 auto;
   padding: 26px;
 }
 
@@ -25,7 +25,7 @@
   padding-bottom: 36px;
 }
 
-.popup-close {
+.form-close {
   position: absolute;
   right: 8px;
   top: 8px;
@@ -45,7 +45,7 @@
   max-width: 388px;
   font-size: 18px;
   border: 1px solid #808080;
-  padding: 0 0 0 10px;
+  padding: 0 10px;
   margin-bottom: 36px;
 }
 
@@ -60,7 +60,7 @@
   background-color: #ea6113;
   color: #fff;
   border: 0;
-  margin: 0 auto;
+  margin: 10px auto;
 }
 
 .show-popup {
