--- a/css/about-me.css
+++ b/css/about-me.css
@@ -4,27 +4,61 @@
   padding: 0 100px;
 }
 
-.about-title {
-  margin: 30px 0 10px 0;
+.aboutme-heading {
+  margin: 30px 0;
+}
+
+.aboutme-title {
+  font-size: 30px;
+  margin-bottom: 10px;
 }
 
 .aboutme-paragraph {
-  font-size: 20px;
-  margin-bottom: 30px;
+  font-size: 18px;
 }
 
-.me-photo {
-  float: left;
-  width: 250px;
+.aboutme-content {
+  display: flex;
+  flex-direction: row;
+}
+
+.all-photos {
   margin: 0 30px 40px 0;
 }
 
+.me-photo {
+  width: 200px;
+  margin-bottom: 10px;
+}
+
+.other-photos {
+  display: flex;
+  justify-content: space-around;
+  width: 200px;
+  box-sizing: border-box;
+  background-color: rgba(0, 125, 255, 0.1);
+  padding: 10px;
+}
+
+.myphoto1, .myphoto2, .myphoto3 {
+  width: 40px;
+}
+
+.myphoto1:hover, .myphoto2:hover, .myphoto3:hover {
+  transform: scale(1.4);
+}
+
+.aboutme-info {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-self: start;
+}
+
 .aboutme-questions {
-  float: left;
   width: 80px;
   font-family: montserrat alternates;
   font-size: 15px;
-  font-style: italic;
 }
 
 .aboutme-questions::first-letter {
@@ -32,36 +66,16 @@
 }
 
 .aboutme-answers {
-  display: flex;
   line-height: 140%;
   margin-left: 40px;
 }
 
-.aboutme-text {
-  margin: 0 0 15px 10px;
-}
-
-/* .me-caption {
-  width: 300px;
-  margin-bottom: 20px;
-} */
-
-.my-other-photos {
+.aboutme-back-button {
   display: flex;
-  justify-content: space-around;
-  width: 300px;
-  box-sizing: border-box;
-  background-color: rgba(0, 110, 255, 0.150);
-  margin-bottom: 40px;
-  padding: 10px 20px;
-}
-
-.myphoto1, .myphoto2, .myphoto3 {
-  height: 64px;
-}
-
-.myphoto1:hover, .myphoto2:hover, .myphoto3:hover {
-  transform: scale(1.5);
+  justify-content: center;
+  align-items: flex-end;
+  height: calc(25vh - 10%);
+  margin-bottom: 25px;
 }
 
 .back-button {
