--- a/css/header.css
+++ b/css/header.css
@@ -32,9 +32,12 @@
 .menu-link:hover {
   display: flex;
   align-items: center;
-  background-color: #ffffffe7;
+  height: 78px;
+  background-color: #ffffffe6;
   color: #213b7e;
-  text-decoration-line: none;  
+  font-size: 16px;
+  text-decoration-line: none;
+  padding: auto;
 }
 
 .menu-link-active {
@@ -59,6 +62,12 @@
   color: #fff;
   font-size: 14px;
   cursor:pointer;
+}
+
+.login-button:hover {
+  text-shadow: #aa5101 1px 1px 2px, #aa5101 -1px -1px 2px;
+  border-radius: 5px;
+  min-height: 48px;
 }
 
 /* Media */
