--- a/css/login-popup.css
+++ b/css/login-popup.css
@@ -39,6 +39,13 @@
   cursor: pointer;
 }
 
+.form-close:hover {
+  transform: scale(1.2);
+  border: 1px solid #ea611360;
+  color: #ea6113;
+  box-shadow: #ea611320 1px 1px 2px, #ea611320 -1px -1px 2px;
+}
+
 .login-field {
   width: 100%;
   height: 40px;
@@ -55,12 +62,19 @@
   align-items: center;
   width: 100%;
   max-width: 153px;
-  height: 50px;
+  min-height: 50px;
   font-size: 18px;
   background-color: #ea6113;
   color: #fff;
   border: 0;
   margin: 10px auto;
+  cursor: pointer;
+}
+
+.popup-button:hover {
+  text-shadow: #aa5101 1px 1px 2px, #aa5101 -1px -1px 2px;
+  border-radius: 5px;
+  min-height: 48px;
 }
 
 .show-popup {
