--- a/css/students.css
+++ b/css/students.css
@@ -22,10 +22,12 @@
 
 .photos {
   display: flex;
-  flex-direction: row;
+  /* flex-direction: row; */
   flex-wrap: wrap;
+  /* align-items: flex-start; */
   gap: 30px;
   width: 100%;
+  height: 300px;
   font-size: 16px;
   padding-bottom: 40px;
 }
@@ -42,6 +44,7 @@
 .student-1:hover {
   transform: scale(1.1);
   transition: 50ms;
+  border-radius: 15px;
 }
 
 .caption-1 {
